--- a/style.css
+++ b/style.css
@@ -1,39 +1,49 @@
 /* Basic Style */
 body {
-    background-color: #f8f8f8;
-    color: #333;
-    font-family: Lato, sans-serif;
+  background-color: #f8f8f8;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
-.aaa {
-    width: 500px;
-    margin: 0 auto;
-    display: block;
-    text-align: right;
+
+.header {
+  width: 500px;
+  margin: 0 auto;
+  display: block;
+  text-align: right;
 }
-.aaa img {
-    width: 100%;
+
+.header__img {
+  width: 100%;
 }
-.aaa .more_inf {
-    font-family: fantasy, cursive;
+
+.header__link {
+  font-family: "Fantasy", cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+
+  .header {
+    text-align: center;
+  }
+
 }
+
+.todo {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
 }
-.centered-main-page-element {
-    display: block;
-    width: 500px;
-    margin: 0 auto 0;
+
+.todo__input {
+  display: flex;
 }
+
 .task {
     width: 56%;
     display: inline-block;
     flex-grow: 1
 }
-.task-row-wrapper {
-    display: flex;
-}
+
 ul {
     margin:0;
     padding: 0px;
@@ -59,12 +69,14 @@ button:hover {
 /* Heading */
 h3,
 label[for="new-task"] {
+    display: block;
+    margin: 0 0 20px;
     color: #333;
     font-weight: 700;
     font-size: 15px;
     border-bottom: 2px solid #333;
     padding: 30px 0 10px;
-    margin: 0;
+    /* margin: 0; */
     text-transform: uppercase;
 }
 input[type="text"] {
@@ -84,10 +96,10 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+/* label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
-}
+} */
 input#new-task {
     width: 318px;
 }
