--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ body {
   display: flex;
 }
 
-.task {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1
+.todo__input_text{
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1
 }
 
 ul {
