--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ button:hover {
   color: #3a3a3a;
 }
 
+input{
+  outline: none;
+}
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -90,15 +94,10 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
-  list-style: none;
-}
-input,button{
-  outline: none;
-}
 
 li {
   overflow: hidden;
+  list-style: none;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
   display: flex;
@@ -114,7 +113,7 @@ li > input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li > label {
+.todo__input_label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
