--- a/style.css
+++ b/style.css
@@ -3,22 +3,22 @@ body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
-};
+}
 
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
-};
+}
 
 .header__img {
   width: 100%;
-};
+}
 
 .header__link {
   font-family: "Fantasy", cursive;
-};
+}
 
 @media (max-width:768px) {
 
@@ -26,7 +26,7 @@ body {
     text-align: center;
   }
 
-};
+}
 
 .section__header {
   display: block;
@@ -37,24 +37,23 @@ body {
   border-bottom: 2px solid #333;
   padding: 30px 0 10px;
   text-transform: uppercase;
-};
-
+}
 
 .todo {
   display: block;
   width: 500px;
   margin: 0 auto 0;
-};
+}
 
 .todo__input {
   display: flex;
-};
+}
 
 .todo__input_text{
   width: 56%;
   display: inline-block;
   flex-grow: 1
-};
+}
 
 button {
   background: none;
@@ -64,15 +63,15 @@ button {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
-};
+}
 
 button:hover {
   color: #3a3a3a;
-};
+}
 
 input{
   outline: none;
-};
+}
 
 input[type="text"] {
   margin: 0;
@@ -85,16 +84,16 @@ input[type="text"] {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
-};
+}
 
 input[type="text"]:focus {
   color: #333;
-};
+}
 
 ul {
   margin: 0;
   padding: 0px;
-};
+}
 
 li {
   overflow: hidden;
@@ -104,53 +103,53 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
-};
+}
 
 li > * {
   vertical-align: middle;
-};
+}
 
 li > input[type="checkbox"] {
   margin: 0 10px;
-};
+}
 
 .todo__input_label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
-};
+}
 
 li > input[type="text"] {
   width: 226px
-};
+}
 
 button.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
-};
+}
 
 button.delete img:hover {
   transform: rotateZ(0);
-};
+}
 
 /* Completed */
 ul#completed-tasks label {
   text-decoration: line-through;
   color: #888;
-};
+}
 
 /* Edit Task */
 ul li input[type=text] {
   display: none;
-};
+}
 
 ul li.editMode input[type=text] {
   display: inline-block;
   width: 224px
-};
+}
 
 ul li.editMode label {
   display: none;
-};
+}
