--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Basic Style */
 body {
   background-color: #f8f8f8;
   color: #333;
@@ -45,8 +44,14 @@ body {
   text-transform: uppercase;
 }
 
-.input__group {
+.input-group {
   display: flex;
+  overflow: hidden;
+  list-style: none;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .input-group__input {
@@ -54,6 +59,34 @@ body {
   display: inline-block;
   flex-grow: 1;
   outline: none;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 21px;
+  padding: 0 9px;
+  border: 1px solid #ddd;
+  background: #fff;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+}
+
+.input-group__input:focus {
+  color: #333;
+}
+
+.input-group__input-list {
+  display: none;
+  width: 226px;
+}
+
+.input-group__input-edit {
+  display: inline-block;
+  width: 224px;
+}
+
+.input-group__checkbox {
+  margin: 0 10px;
 }
 
 .input-group__button {
@@ -71,55 +104,28 @@ body {
   color: #3a3a3a;
 }
 
-input[type="text"] {
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
-  height: 21px;
-  padding: 0 9px;
-  border: 1px solid #ddd;
-  background: #fff;
-  border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
-}
-
-input[type="text"]:focus {
-  color: #333;
-}
-
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-li {
-  overflow: hidden;
-  list-style: none;
-  padding: 20px 0;
-  border-bottom: 1px solid #eee;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-li > * {
-  vertical-align: middle;
-}
-
-.input__group_checkbox {
-  margin: 0 10px;
-}
-
-.todo__input_label {
+.input-group__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
-  width: 226px;
+  width: 56%;
+  list-style: none;
+  display: inline-block;
+  flex-grow: 1;
 }
 
-li > input[type="text"] {
-  width: 226px
+.input-group__label-edit {
+  display: none;
+}
+
+.input-group__label-complited {
+  text-decoration: line-through;
+  color: #888;
 }
 
 .input-group__button-delete_img {
@@ -130,24 +136,4 @@ li > input[type="text"] {
 
 .input-group__button-delete_img:hover {
   transform: rotateZ(0);
-}
-
-/* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through;
-  color: #888;
-}
-
-/* Edit Task */
-ul li input[type=text] {
-  display: none;
-}
-
-ul li.editMode input[type=text] {
-  display: inline-block;
-  width: 224px
-}
-
-ul li.editMode label {
-  display: none;
 }
